--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!--Подключение Roboto font-->
+        <!--Connecting Roboto font-->
         <link
                 rel="stylesheet"
                 href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
         />
-        <!--Подключение иконок-->
+        <!--Connecting MaterialUI icons-->
         <link
                 rel="stylesheet"
                 href="https://fonts.googleapis.com/icon?family=Material+Icons"
